Added preliminar search

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,10 @@
 CXX  = g++
 EXEC = TP01
-D_FLAGS = -DDEBUG
+D_FLAGS = -g -DDEBUG
 
 # Remova D_FLAGS se não quiser rodar em modo DEBUG
-CXX_FLAGS = $(D_FLAGS)
+#CXX_FLAGS = $(D_FLAGS)
+CXX_FLAGS = -O3
 
 all: hash.o textpool.o main.o
 	$(CXX) hash.o textpool.o main.o -o $(EXEC) $(CXX_FLAGS)
