Target test no Makefile.

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,6 +9,8 @@ CXX_FLAGS = $(D_FLAGS)
 all: hash.o textpool.o main.o
 	$(CXX) hash.o textpool.o main.o -o $(EXEC) $(CXX_FLAGS)
 
+test: lista
+
 main.o: main.cpp
 	$(CXX) -c main.cpp -o main.o $(CXX_FLAGS)
 
@@ -17,6 +19,15 @@ textpool.o: TextPool.cpp
 
 hash.o: Hash.cpp
 	$(CXX) -c Hash.cpp -o hash.o $(CXX_FLAGS)
+
+# Testes
+lista: lista.o list.o
+	$(CXX) lista.o list.o -o tests/lista $(CXX_FLAGS)
+	
+list.o: List.cpp
+	$(CXX) -c List.cpp -o list.o $(CXX_FLAGS)
+lista.o: tests/lista.cpp
+	$(CXX) -c tests/lista.cpp -o lista.o $(CXX_FLAGS)
 
 clean:
 	rm -rf *.o *~
